force-app/main/default/objects/CS_Tier_Limit__mdt/CS_Tier_Limit__mdt.object-meta.xml
<CustomObject>
    <label>CS Tier Limit</label>
    <pluralLabel>CS Tier Limits</pluralLabel>
</CustomObject>