force-app/main/default/objects/CS_Tier_Limit__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>API name of the field to which it needs to be compared with</description>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>