force-app/main/default/objects/CS_Tier_Limit__mdt/fields/Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Max_Value__c</fullName>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>