force-app/main/default/objects/CS_Tier_Limit__mdt/fields/Min_Value__c.field-meta.xml
<CustomField>
    <fullName>Min_Value__c</fullName>
    <label>Min Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>