force-app/main/default/objects/CS_Tier_Limit__mdt/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <label>Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>