force-app/main/default/objects/CS_Tier_Limit__mdt/fields/Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Tier_Name__c</fullName>
    <label>Tier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>